--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,7 +26,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 10:26</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 10:49</p>
 </section>
 <aside class="notes">
 <p>
@@ -40,8 +40,8 @@ Collect Info &amp; Tutorial Sources for
 </aside>
 
 <section>
-<section id="slide-orgfdfd0c0">
-<h2 id="orgfdfd0c0">Tim Anderson</h2>
+<section id="slide-orge5226b7">
+<h2 id="orge5226b7">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -67,8 +67,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orgd4676aa">
-<h2 id="orgd4676aa">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-orgeca0657">
+<h2 id="orgeca0657">So, what is this Dactyl Keyboard thing?</h2>
 
 <div class="figure">
 <p><img src="img/brooke_baldwin.jpg" alt="brooke_baldwin.jpg" />
@@ -77,8 +77,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orgbfca92d">
-<h2 id="orgbfca92d">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-org78a590b">
+<h2 id="org78a590b">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
@@ -106,8 +106,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-org098725c">
-<h2 id="org098725c">History &amp; Background</h2>
+<section id="slide-org1759ef0">
+<h2 id="org1759ef0">History &amp; Background</h2>
 <p>
 <a href="uk3A41U0iO4">uk3A41U0iO4</a>
 </p>
@@ -122,8 +122,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-org4323ea1">
-<h2 id="org4323ea1">Let's look at a regular keyboard</h2>
+<section id="slide-orga5e9b1a">
+<h2 id="orga5e9b1a">Let's look at a regular keyboard</h2>
 <ul>
 <li>History of Typwriter According to Matt Addereth</li>
 <li>Keyboard design may be a bit antiquated</li>
@@ -149,8 +149,8 @@ that out of the way, let's look at some things the internet tells you not to do.
 </ul>
 
 </section>
-<section id="slide-org9c24aed">
-<h3 id="org9c24aed">Benefits of Ergo keyboards</h3>
+<section id="slide-orga65770b">
+<h3 id="orga65770b">Benefits of Ergo keyboards</h3>
 <aside class="notes">
 <p>
 I consider my hands to be my greatest physical asset, other than my brain. To be
@@ -166,8 +166,8 @@ build my own badass keyboard, so I did.
 </section>
 </section>
 <section>
-<section id="slide-org88d1e5f">
-<h2 id="org88d1e5f">Why Would You Want That?</h2>
+<section id="slide-org16ed36e">
+<h2 id="org16ed36e">Why Would You Want That?</h2>
 <aside class="notes">
 <p>
 While browsing around looking at these ergonomic keyboards I see a recurring
@@ -194,8 +194,8 @@ internet tells us not to do.
 </section>
 </section>
 <section>
-<section id="slide-org0337c5f">
-<h2 id="org0337c5f">Notable Mentions</h2>
+<section id="slide-org0b69dbb">
+<h2 id="org0b69dbb">Notable Mentions</h2>
 <aside class="notes">
 <p>
 The original Dactyl design is what I chose to go with, and I'll go over my
@@ -205,8 +205,8 @@ other option available &amp; what I like and don't like about them.
 
 </aside>
 </section>
-<section id="slide-org594a045">
-<h3 id="org594a045"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
+<section id="slide-org26d1baf">
+<h3 id="org26d1baf"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -227,8 +227,8 @@ As I
 </aside>
 
 </section>
-<section id="slide-orgb58907c">
-<h3 id="orgb58907c"><a href="https://ergodox-ez.com/">ErgoDox EZ</a></h3>
+<section id="slide-org0dcb32d">
+<h3 id="org0dcb32d"><a href="https://ergodox-ez.com/">ErgoDox EZ</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -250,8 +250,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-org0d34ea9">
-<h3 id="org0d34ea9"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-org79aa4d4">
+<h3 id="org79aa4d4"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -272,8 +272,8 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </aside>
 
 </section>
-<section id="slide-org195e955">
-<h3 id="org195e955"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
+<section id="slide-org6aa9814">
+<h3 id="org6aa9814"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -298,8 +298,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-orgc5b7fe7">
-<h3 id="orgc5b7fe7"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
+<section id="slide-orge67df24">
+<h3 id="orge67df24"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -323,13 +323,13 @@ Reference Youtube channel.
 </section>
 </section>
 <section>
-<section id="slide-orgda10b77">
-<h2 id="orgda10b77">Other Dactyl Variations</h2>
-<div class="outline-text-2" id="text-orgda10b77">
+<section id="slide-org1376a31">
+<h2 id="org1376a31">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-org1376a31">
 </div>
 </section>
-<section id="slide-org4d28106">
-<h3 id="org4d28106"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+<section id="slide-org81d4fad">
+<h3 id="org81d4fad"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
@@ -354,8 +354,8 @@ he's made the source available.
 </aside>
 
 </section>
-<section id="slide-org783d01d">
-<h3 id="org783d01d"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+<section id="slide-org50eca3a">
+<h3 id="org50eca3a"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
 <ul>
 <li class="fragment fade-in">Advantages:</li>
 <li class="fragment fade-in">Disadvantages:</li>
@@ -373,8 +373,8 @@ meant to fit with Cherry MX mechanical switches.
 </aside>
 
 </section>
-<section id="slide-org128f27a">
-<h3 id="org128f27a"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+<section id="slide-org9c20bac">
+<h3 id="org9c20bac"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
@@ -402,8 +402,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgaa25d32">
-<h2 id="orgaa25d32">More Do-it-Yourself Options</h2>
+<section id="slide-orgda63d2b">
+<h2 id="orgda63d2b">More Do-it-Yourself Options</h2>
 <p>
 <code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
 </p>
@@ -415,8 +415,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orge3109d1">
-<h2 id="orge3109d1">Reasons for Choosing Dactyl</h2>
+<section id="slide-org56151a4">
+<h2 id="org56151a4">Reasons for Choosing Dactyl</h2>
 <ul>
 <li>Open Source</li>
 <li>Kinesis Advantage form factor</li>
@@ -425,8 +425,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-orgf9709c1">
-<h3 id="orgf9709c1">My Reasons for Building by Hand Instead of Purchasing</h3>
+<section id="slide-orgac654e8">
+<h3 id="orgac654e8">My Reasons for Building by Hand Instead of Purchasing</h3>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -438,13 +438,13 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org8fe21fb">
-<h2 id="org8fe21fb">Build Overview</h2>
-<div class="outline-text-2" id="text-org8fe21fb">
+<section id="slide-org5f38c04">
+<h2 id="org5f38c04">Build Overview</h2>
+<div class="outline-text-2" id="text-org5f38c04">
 </div>
 </section>
-<section id="slide-orgbe9da94">
-<h3 id="orgbe9da94">Shell/Case &amp; Hardware</h3>
+<section id="slide-orgec27e94">
+<h3 id="orgec27e94">Shell/Case &amp; Hardware</h3>
 <ul>
 <li>Time</li>
 <li>Apologize for lack of media</li>
@@ -460,8 +460,8 @@ switch to this in the future.
 </aside>
 
 </section>
-<section id="slide-orgd2010cc">
-<h3 id="orgd2010cc">Switches &amp; Keycaps</h3>
+<section id="slide-orgaefb058">
+<h3 id="orgaefb058">Switches &amp; Keycaps</h3>
 <ul>
 <li>Fits Cherry MX switches, explain what they are</li>
 <li>Go over keycap profiles</li>
@@ -469,8 +469,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-org9c7361b">
-<h3 id="org9c7361b">Etching</h3>
+<section id="slide-orgd7e137f">
+<h3 id="orgd7e137f">Etching</h3>
 <ul>
 <li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (Marketed as 'safer' Muriatic
 Acid, found on Amazon.)</li>
@@ -478,9 +478,9 @@ Acid, found on Amazon.)</li>
 
 </ul>
 </section>
-<section id="slide-orge4933b6">
-<h4 id="orge4933b6">Etching Process</h4>
-<section><video controls><source data-src="~/Movies/Etching.mp4" type="video/mp4" /></video></section>
+<section id="slide-org55e483a">
+<h4 id="org55e483a">Etching Process</h4>
+<section><video controls><source data-src="media/Etching-resize.mp4" type="video/mp4" /></video></section>
 <aside class="notes">
 <p>
 Make note of 'adding the acid', copper lifting, color of solution, Kapton tape
@@ -489,8 +489,8 @@ backing &amp; sanding residue (220)
 
 </aside>
 </section>
-<section id="slide-orgf448602">
-<h3 id="orgf448602">PCB &amp; Wiring</h3>
+<section id="slide-org05290b0">
+<h3 id="org05290b0">PCB &amp; Wiring</h3>
 <ul>
 <li>The circuit design in the repo is inaccurate. I had to flip around some of
 the designs because they were backwards. I didn't find this out until after my
@@ -501,7 +501,7 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 <ul class="org-ul">
-<li><a id="org69a27ae"></a>PSA: TRRS <i>not</i> TRS!<br />
+<li><a id="orgaea7d2d"></a>PSA: TRRS <i>not</i> TRS!<br />
 <ul>
 <li>Include comparison.</li>
 
@@ -515,18 +515,18 @@ in case I encountered those kinds of problems.</li>
 </li>
 </ul>
 </section>
-<section id="slide-orgf2a11eb">
-<h3 id="orgf2a11eb">Firmware</h3>
+<section id="slide-orgf814bf6">
+<h3 id="orgf814bf6">Firmware</h3>
 </section>
-<section id="slide-orgdb8d250">
-<h3 id="orgdb8d250">How Does it Work?</h3>
+<section id="slide-orgebe3be3">
+<h3 id="orgebe3be3">How Does it Work?</h3>
 <ul>
 <li>Explain matrix positions</li>
 
 </ul>
 </section>
-<section id="slide-org36d9ecc">
-<h3 id="org36d9ecc">Challenges</h3>
+<section id="slide-orgf13a986">
+<h3 id="orgf13a986">Challenges</h3>
 <ul>
 <li>Hardware, clearance &amp; dimensions</li>
 <li>Choosing LED Resistors</li>
@@ -538,8 +538,8 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 </section>
-<section id="slide-org6529146">
-<h3 id="org6529146">What Did it Cost?</h3>
+<section id="slide-orgf8f1d82">
+<h3 id="orgf8f1d82">What Did it Cost?</h3>
 <ul>
 <li>Parts table</li>
 
@@ -547,8 +547,8 @@ in case I encountered those kinds of problems.</li>
 </section>
 </section>
 <section>
-<section id="slide-org14a28dc">
-<h2 id="org14a28dc">Resources</h2>
+<section id="slide-org2fd2eb9">
+<h2 id="org2fd2eb9">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -578,8 +578,8 @@ commercialize different Dactyl variations.
 <code>I have no affiliation or experience with the above. YMMV!</code>
 </p>
 </section>
-<section id="slide-org009c607">
-<h3 id="org009c607">Hardware &amp; Accessories</h3>
+<section id="slide-org9dc309c">
+<h3 id="org9dc309c">Hardware &amp; Accessories</h3>
 <ul>
 <li><a href="https://kbdfans.com">https://kbdfans.com</a></li>
 <li><a href="https://aliexpress.com">https://aliexpress.com</a>
