--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,7 +26,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 10:49</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 13:39</p>
 </section>
 <aside class="notes">
 <p>
@@ -40,8 +40,8 @@ Collect Info &amp; Tutorial Sources for
 </aside>
 
 <section>
-<section id="slide-orge5226b7">
-<h2 id="orge5226b7">Tim Anderson</h2>
+<section id="slide-org5c14d1c">
+<h2 id="org5c14d1c">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -67,8 +67,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orgeca0657">
-<h2 id="orgeca0657">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-org25bc192">
+<h2 id="org25bc192">So, what is this Dactyl Keyboard thing?</h2>
 
 <div class="figure">
 <p><img src="img/brooke_baldwin.jpg" alt="brooke_baldwin.jpg" />
@@ -77,8 +77,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org78a590b">
-<h2 id="org78a590b">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-orgd01ce19">
+<h2 id="orgd01ce19">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
@@ -106,8 +106,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-org1759ef0">
-<h2 id="org1759ef0">History &amp; Background</h2>
+<section id="slide-org42337fe">
+<h2 id="org42337fe">History &amp; Background</h2>
 <p>
 <a href="uk3A41U0iO4">uk3A41U0iO4</a>
 </p>
@@ -122,8 +122,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-orga5e9b1a">
-<h2 id="orga5e9b1a">Let's look at a regular keyboard</h2>
+<section id="slide-org25964f6">
+<h2 id="org25964f6">Let's look at a regular keyboard</h2>
 <ul>
 <li>History of Typwriter According to Matt Addereth</li>
 <li>Keyboard design may be a bit antiquated</li>
@@ -149,8 +149,8 @@ that out of the way, let's look at some things the internet tells you not to do.
 </ul>
 
 </section>
-<section id="slide-orga65770b">
-<h3 id="orga65770b">Benefits of Ergo keyboards</h3>
+<section id="slide-orgb61f61e">
+<h3 id="orgb61f61e">Benefits of Ergo keyboards</h3>
 <aside class="notes">
 <p>
 I consider my hands to be my greatest physical asset, other than my brain. To be
@@ -166,8 +166,8 @@ build my own badass keyboard, so I did.
 </section>
 </section>
 <section>
-<section id="slide-org16ed36e">
-<h2 id="org16ed36e">Why Would You Want That?</h2>
+<section id="slide-org1c7907e">
+<h2 id="org1c7907e">Why Would You Want That?</h2>
 <aside class="notes">
 <p>
 While browsing around looking at these ergonomic keyboards I see a recurring
@@ -182,7 +182,7 @@ this talk I'd like to go over some of the things I've found while looking into t
 
 <aside class="notes">
 <p>
-Now the reason I went over the RSI examples is to demonstrate how a regular
+So the reason I went over the RSI examples is to demonstrate how a regular
 keyboard ~postures &amp; how the designs of these ergonomic keyboards I'm about to
 show you are informed by those issues and how they ~mitigate
 You can see how the design was informed to try and mitigate these things the
@@ -194,8 +194,8 @@ internet tells us not to do.
 </section>
 </section>
 <section>
-<section id="slide-org0b69dbb">
-<h2 id="org0b69dbb">Notable Mentions</h2>
+<section id="slide-org97632ed">
+<h2 id="org97632ed">Notable Mentions</h2>
 <aside class="notes">
 <p>
 The original Dactyl design is what I chose to go with, and I'll go over my
@@ -205,8 +205,8 @@ other option available &amp; what I like and don't like about them.
 
 </aside>
 </section>
-<section id="slide-org26d1baf">
-<h3 id="org26d1baf"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
+<section id="slide-orgd9aa170">
+<h3 id="orgd9aa170"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -214,21 +214,26 @@ other option available &amp; what I like and don't like about them.
 </div>
 
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvanteges: $320.00 USD</li>
+<li class="fragment fade-in">Advantages: Widely considered the best ergo keyboard commercially available</li>
+<li class="fragment fade-in">Disadvanteges: $320.00 USD, some reviews describe feeling 'cheap'</li>
 <li class="fragment fade-in">Open Source: No</li>
 
 </ul>
 <aside class="notes">
 <p>
-As I
+As I first started really focusing on learning tools like bash &amp; emacs, I
+started hearing allusions to RSI, &amp; more than a few references to this keyboard.
+It's probably the best commercial ergo keyboard you can get, but it comes at a
+price. Also, I think it was a review by Linus Tech Tips where he describes the
+feel of the plastic being light &amp; inexpensive. Not something you want to hear
+when you drop over $300 on something exclusively commercial.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-org0dcb32d">
-<h3 id="org0dcb32d"><a href="https://ergodox-ez.com/">ErgoDox EZ</a></h3>
+<section id="slide-orge10b4cf">
+<h3 id="orge10b4cf"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -236,22 +241,27 @@ As I
 </div>
 
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvantages:</li>
-<li class="fragment fade-in">Open Source:</li>
+<li class="fragment fade-in">Advantages: Lots of support if building from scratch, also may be a better
+product than Advantage2</li>
+<li class="fragment fade-in">Disadvantages: Also about $300 if purchased commercially (depending on the options)</li>
+<li class="fragment fade-in">Open Source: Both commercially available &amp; open source</li>
 
 </ul>
 <aside class="notes">
 <p>
 One of the most popular ergo keyboards I've seen. It's garnered the attention &amp;
-a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech Tips</a>, and has a <a href="https://www.ergodox.io/">long open source history</a>.
+a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech Tips</a>, and has a <a href="https://www.ergodox.io/">long open source history</a>. As far as I
+can tell, the Ergodox project really kickstarted the idea of open source
+keyboard hardware. You see references to it everywhere, and its popularity on
+the ergo keyboard space is unavoidable. If you go the DIY route, you can find blank PCBs somewhat
+readily, and the rest of the parts can be easily sourced yourself.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-org79aa4d4">
-<h3 id="org79aa4d4"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-orgf93b529">
+<h3 id="orgf93b529"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -259,21 +269,26 @@ a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech T
 </div>
 
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvantages:</li>
-<li class="fragment fade-in">Open Source:</li>
+<li class="fragment fade-in">Advantages: Split-hand, simple, affordable design (~$100 USD)</li>
+<li class="fragment fade-in">Disadvantages: Not concave</li>
+<li class="fragment fade-in">Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
 <p>
-
+This was my first introduction to the idea of an open source keyboard. I was
+browsing thingiverse (A place where people share their 3D print designs), and
+someone had shared a brakcket they used to attach this keyboard to their laptop.
+I remembered that, and after looking at the previou Kinesis keyboard, I wondered
+if anyone had started a project similar to that design, but open source &amp; with a
+split form factor. Someone had, and that's why I'm here.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-org6aa9814">
-<h3 id="org6aa9814"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
+<section id="slide-org5b72d63">
+<h3 id="org5b72d63"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -298,8 +313,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-orge67df24">
-<h3 id="orge67df24"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
+<section id="slide-orgd215c38">
+<h3 id="orgd215c38"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -307,15 +322,20 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </div>
 
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvantages:</li>
-<li class="fragment fade-in">Open Source:</li>
+<li class="fragment fade-in">Advantages: Very simple design (solder on components, nothing else to worry about)</li>
+<li class="fragment fade-in">Disadvantages: PCB is $80, no case for protection</li>
+<li class="fragment fade-in">Open Source: Yes?</li>
 
 </ul>
 <aside class="notes">
 <p>
-Notable differences between the Signum 3 &amp; Atreus are the thumb clusters.
-Reference Youtube channel.
+The guy who makes this is a freelance programmer based in Kentucky. He has a
+youtube channel that's pretty interesting if you're into vlogs. The notable
+differences between this &amp; Atreus on the previous slide are the thumb cluster
+positions and the exposed PCB. It does look like the entire board is covered
+with a solder mask, but it won't be as protected if dropped. It looks like there
+is a repo made for this on github, but there's not much in it. You may need to
+contact the author for product designs if you need them.
 </p>
 
 </aside>
@@ -323,13 +343,13 @@ Reference Youtube channel.
 </section>
 </section>
 <section>
-<section id="slide-org1376a31">
-<h2 id="org1376a31">Other Dactyl Variations</h2>
-<div class="outline-text-2" id="text-org1376a31">
+<section id="slide-org388f6fe">
+<h2 id="org388f6fe">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-org388f6fe">
 </div>
 </section>
-<section id="slide-org81d4fad">
-<h3 id="org81d4fad"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+<section id="slide-org46807c0">
+<h3 id="org46807c0"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
@@ -337,9 +357,9 @@ Reference Youtube channel.
 </div>
 
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvantages:</li>
-<li class="fragment fade-in">Open Source:</li>
+<li class="fragment fade-in">Advantages: Reuse your Ergodox keycaps (finding correct amount of keys can be difficult)</li>
+<li class="fragment fade-in">Disadvantages: Incomplete design</li>
+<li class="fragment fade-in">Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
@@ -354,27 +374,34 @@ he's made the source available.
 </aside>
 
 </section>
-<section id="slide-org50eca3a">
-<h3 id="org50eca3a"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+<section id="slide-org97065e1">
+<h3 id="org97065e1"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+
+<div class="figure">
+<p><img src="img/LightCycle.jpeg" alt="LightCycle.jpeg" />
+</p>
+</div>
+
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvantages:</li>
-<li class="fragment fade-in">Open Source:</li>
+<li class="fragment fade-in">Advantages: Slightly smaller footprint (fewer keys)</li>
+<li class="fragment fade-in">Disadvantages: STL files for 3D printing appear to need more repair than basic model</li>
+<li class="fragment fade-in">Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
 <p>
-In the main repository you'll find this as an option along with the 'cherry' version. The LightCycle version of
-the Dactyl has fewer thumb cluster switch positions, and was designed to match with the <a href="http://matias.ca/switches/">Matias
-ALPS-inspired mechanical keyswitches</a>. The 'cherry' one is the same design, but
-meant to fit with Cherry MX mechanical switches.
+In the main repository you'll find this as an option along with the 'cherry'
+option for the same version. The LightCycle version of the Dactyl has fewer
+thumb cluster switch positions and one less row of keys It was originally designed to match with the <a href="http://matias.ca/switches/">Matias
+ALPS-inspired mechanical keyswitches</a>. The 'cherry' version of this is the same
+design, but are meant to be fit with Cherry MX mechanical switches.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-org9c20bac">
-<h3 id="org9c20bac"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+<section id="slide-org9665d6f">
+<h3 id="org9665d6f"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
@@ -382,9 +409,11 @@ meant to fit with Cherry MX mechanical switches.
 </div>
 
 <ul>
-<li class="fragment fade-in">Advantages:</li>
-<li class="fragment fade-in">Disadvantages:</li>
-<li class="fragment fade-in">Open Source:</li>
+<li class="fragment fade-in">Advantages: Thumb clusters are brought down to a more natural position, Case
+is larger making wiring less tedious</li>
+<li class="fragment fade-in">Disadvantages: Must be wired by hand, all of the challenges that come with
+original Dactyl</li>
+<li class="fragment fade-in">Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
@@ -402,8 +431,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgda63d2b">
-<h2 id="orgda63d2b">More Do-it-Yourself Options</h2>
+<section id="slide-orgbd13382">
+<h2 id="orgbd13382">More Do-it-Yourself Options</h2>
 <p>
 <code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
 </p>
@@ -415,8 +444,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org56151a4">
-<h2 id="org56151a4">Reasons for Choosing Dactyl</h2>
+<section id="slide-org00d836a">
+<h2 id="org00d836a">Reasons for Choosing Dactyl</h2>
 <ul>
 <li>Open Source</li>
 <li>Kinesis Advantage form factor</li>
@@ -425,8 +454,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-orgac654e8">
-<h3 id="orgac654e8">My Reasons for Building by Hand Instead of Purchasing</h3>
+<section id="slide-org4b32e65">
+<h3 id="org4b32e65">My Reasons for Building by Hand Instead of Purchasing</h3>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -438,13 +467,13 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org5f38c04">
-<h2 id="org5f38c04">Build Overview</h2>
-<div class="outline-text-2" id="text-org5f38c04">
+<section id="slide-org24ae83d">
+<h2 id="org24ae83d">Build Overview</h2>
+<div class="outline-text-2" id="text-org24ae83d">
 </div>
 </section>
-<section id="slide-orgec27e94">
-<h3 id="orgec27e94">Shell/Case &amp; Hardware</h3>
+<section id="slide-orga0a30c0">
+<h3 id="orga0a30c0">Shell/Case &amp; Hardware</h3>
 <ul>
 <li>Time</li>
 <li>Apologize for lack of media</li>
@@ -460,8 +489,8 @@ switch to this in the future.
 </aside>
 
 </section>
-<section id="slide-orgaefb058">
-<h3 id="orgaefb058">Switches &amp; Keycaps</h3>
+<section id="slide-org247fd6b">
+<h3 id="org247fd6b">Switches &amp; Keycaps</h3>
 <ul>
 <li>Fits Cherry MX switches, explain what they are</li>
 <li>Go over keycap profiles</li>
@@ -469,8 +498,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-orgd7e137f">
-<h3 id="orgd7e137f">Etching</h3>
+<section id="slide-org6c36044">
+<h3 id="org6c36044">Etching</h3>
 <ul>
 <li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (Marketed as 'safer' Muriatic
 Acid, found on Amazon.)</li>
@@ -478,8 +507,8 @@ Acid, found on Amazon.)</li>
 
 </ul>
 </section>
-<section id="slide-org55e483a">
-<h4 id="org55e483a">Etching Process</h4>
+<section id="slide-orgac3d3d2">
+<h4 id="orgac3d3d2">Etching Process</h4>
 <section><video controls><source data-src="media/Etching-resize.mp4" type="video/mp4" /></video></section>
 <aside class="notes">
 <p>
@@ -489,8 +518,8 @@ backing &amp; sanding residue (220)
 
 </aside>
 </section>
-<section id="slide-org05290b0">
-<h3 id="org05290b0">PCB &amp; Wiring</h3>
+<section id="slide-org769245f">
+<h3 id="org769245f">PCB &amp; Wiring</h3>
 <ul>
 <li>The circuit design in the repo is inaccurate. I had to flip around some of
 the designs because they were backwards. I didn't find this out until after my
@@ -501,7 +530,7 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 <ul class="org-ul">
-<li><a id="orgaea7d2d"></a>PSA: TRRS <i>not</i> TRS!<br />
+<li><a id="org4d074af"></a>PSA: TRRS <i>not</i> TRS!<br />
 <ul>
 <li>Include comparison.</li>
 
@@ -515,18 +544,25 @@ in case I encountered those kinds of problems.</li>
 </li>
 </ul>
 </section>
-<section id="slide-orgf814bf6">
-<h3 id="orgf814bf6">Firmware</h3>
+<section id="slide-org392d176">
+<h3 id="org392d176">Firmware</h3>
 </section>
-<section id="slide-orgebe3be3">
-<h3 id="orgebe3be3">How Does it Work?</h3>
-<ul>
-<li>Explain matrix positions</li>
+<section id="slide-orgccc6127">
+<h3 id="orgccc6127">How Does it Work?</h3>
 
-</ul>
+<div class="figure">
+<p><img src="img/howkeymatriceswork.gif" alt="howkeymatriceswork.gif" />
+</p>
+</div>
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
 </section>
-<section id="slide-orgf13a986">
-<h3 id="orgf13a986">Challenges</h3>
+<section id="slide-orgd942c69">
+<h3 id="orgd942c69">Challenges</h3>
 <ul>
 <li>Hardware, clearance &amp; dimensions</li>
 <li>Choosing LED Resistors</li>
@@ -538,8 +574,8 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 </section>
-<section id="slide-orgf8f1d82">
-<h3 id="orgf8f1d82">What Did it Cost?</h3>
+<section id="slide-org83b3a6f">
+<h3 id="org83b3a6f">What Did it Cost?</h3>
 <ul>
 <li>Parts table</li>
 
@@ -547,8 +583,8 @@ in case I encountered those kinds of problems.</li>
 </section>
 </section>
 <section>
-<section id="slide-org2fd2eb9">
-<h2 id="org2fd2eb9">Resources</h2>
+<section id="slide-org6daf7c4">
+<h2 id="org6daf7c4">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -578,8 +614,14 @@ commercialize different Dactyl variations.
 <code>I have no affiliation or experience with the above. YMMV!</code>
 </p>
 </section>
-<section id="slide-org9dc309c">
-<h3 id="org9dc309c">Hardware &amp; Accessories</h3>
+<section id="slide-org6dc721c">
+<h3 id="org6dc721c">Tutorials</h3>
+<p>
+<a href="https://www.youtube.com/watch?v=4dZ2LKe7660%20j">Etching with Muriatic Acid &amp; Hydrgen Peroxide</a>
+</p>
+</section>
+<section id="slide-org7d536ce">
+<h3 id="org7d536ce">Hardware &amp; Accessories</h3>
 <ul>
 <li><a href="https://kbdfans.com">https://kbdfans.com</a></li>
 <li><a href="https://aliexpress.com">https://aliexpress.com</a>
