--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Rochester KLUG Keyboard Meetup</title>
+<title>So What Is This Dactyl Thing &amp; Why Should I Care?</title>
 <meta name="author" content="(Tim Anderson)"/>
 <style type="text/css">
 .underline { text-decoration: underline; }
@@ -26,7 +26,7 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 13:39</p>
+<section id="sec-title-slide"><h1 class="title">So What Is This Dactyl Thing &amp; Why Should I Care?</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-10 Wed 20:01</p>
 </section>
 <aside class="notes">
 <p>
@@ -40,8 +40,8 @@ Collect Info &amp; Tutorial Sources for
 </aside>
 
 <section>
-<section id="slide-org5c14d1c">
-<h2 id="org5c14d1c">Tim Anderson</h2>
+<section id="slide-orge6a2040">
+<h2 id="orge6a2040">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -67,8 +67,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org25bc192">
-<h2 id="org25bc192">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-org2c0ea11">
+<h2 id="org2c0ea11">So, what is this Dactyl Keyboard thing?</h2>
 
 <div class="figure">
 <p><img src="img/brooke_baldwin.jpg" alt="brooke_baldwin.jpg" />
@@ -77,8 +77,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orgd01ce19">
-<h2 id="orgd01ce19">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-org603114a">
+<h2 id="org603114a">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
@@ -106,10 +106,10 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-org42337fe">
-<h2 id="org42337fe">History &amp; Background</h2>
+<section id="slide-org4e5d7ea">
+<h2 id="org4e5d7ea">History &amp; Background</h2>
 <p>
-<a href="uk3A41U0iO4">uk3A41U0iO4</a>
+<iframe width="440" height="335" src="https://www.youtube.com/embed/uk3A41U0iO4" frameborder="0" allowfullscreen></iframe>
 </p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=uk3A41U0iO4">https://www.youtube.com/watch?v=uk3A41U0iO4</a></li>
@@ -122,8 +122,8 @@ keyboard is the way it is, so that we can understand what we're working with.
 </section>
 </section>
 <section>
-<section id="slide-org25964f6">
-<h2 id="org25964f6">Let's look at a regular keyboard</h2>
+<section id="slide-org8551681">
+<h2 id="org8551681">Let's look at a regular keyboard</h2>
 <ul>
 <li>History of Typwriter According to Matt Addereth</li>
 <li>Keyboard design may be a bit antiquated</li>
@@ -149,8 +149,8 @@ that out of the way, let's look at some things the internet tells you not to do.
 </ul>
 
 </section>
-<section id="slide-orgb61f61e">
-<h3 id="orgb61f61e">Benefits of Ergo keyboards</h3>
+<section id="slide-orgf58131f">
+<h3 id="orgf58131f">Benefits of Ergo keyboards</h3>
 <aside class="notes">
 <p>
 I consider my hands to be my greatest physical asset, other than my brain. To be
@@ -166,8 +166,8 @@ build my own badass keyboard, so I did.
 </section>
 </section>
 <section>
-<section id="slide-org1c7907e">
-<h2 id="org1c7907e">Why Would You Want That?</h2>
+<section id="slide-orgcad720f">
+<h2 id="orgcad720f">Why Would You Want That?</h2>
 <aside class="notes">
 <p>
 While browsing around looking at these ergonomic keyboards I see a recurring
@@ -194,8 +194,8 @@ internet tells us not to do.
 </section>
 </section>
 <section>
-<section id="slide-org97632ed">
-<h2 id="org97632ed">Notable Mentions</h2>
+<section id="slide-orga75ff13">
+<h2 id="orga75ff13">Notable Mentions</h2>
 <aside class="notes">
 <p>
 The original Dactyl design is what I chose to go with, and I'll go over my
@@ -205,8 +205,8 @@ other option available &amp; what I like and don't like about them.
 
 </aside>
 </section>
-<section id="slide-orgd9aa170">
-<h3 id="orgd9aa170"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
+<section id="slide-org855bf1e">
+<h3 id="org855bf1e"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -232,8 +232,8 @@ when you drop over $300 on something exclusively commercial.
 </aside>
 
 </section>
-<section id="slide-orge10b4cf">
-<h3 id="orge10b4cf"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
+<section id="slide-org253ac8e">
+<h3 id="org253ac8e"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -251,17 +251,18 @@ product than Advantage2</li>
 <p>
 One of the most popular ergo keyboards I've seen. It's garnered the attention &amp;
 a review from <a href="https://www.youtube.com/watch?v=LALQsqZP1nA">Linus Tech Tips</a>, and has a <a href="https://www.ergodox.io/">long open source history</a>. As far as I
-can tell, the Ergodox project really kickstarted the idea of open source
+can tell, the Ergodox project kickstarted the idea of open source
 keyboard hardware. You see references to it everywhere, and its popularity on
-the ergo keyboard space is unavoidable. If you go the DIY route, you can find blank PCBs somewhat
+the ergo keyboard space is unavoidable. Almost any split, open hardware design
+available has borrowed something from the ErgoDox. If you go the DIY route, you can find blank PCBs somewhat
 readily, and the rest of the parts can be easily sourced yourself.
 </p>
 
 </aside>
 
 </section>
-<section id="slide-orgf93b529">
-<h3 id="orgf93b529"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-org49bce47">
+<h3 id="org49bce47"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -287,8 +288,8 @@ split form factor. Someone had, and that's why I'm here.
 </aside>
 
 </section>
-<section id="slide-org5b72d63">
-<h3 id="org5b72d63"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
+<section id="slide-orgd4677e7">
+<h3 id="orgd4677e7"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -313,8 +314,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-orgd215c38">
-<h3 id="orgd215c38"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
+<section id="slide-org3633898">
+<h3 id="org3633898"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -343,13 +344,13 @@ contact the author for product designs if you need them.
 </section>
 </section>
 <section>
-<section id="slide-org388f6fe">
-<h2 id="org388f6fe">Other Dactyl Variations</h2>
-<div class="outline-text-2" id="text-org388f6fe">
+<section id="slide-org73032a9">
+<h2 id="org73032a9">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-org73032a9">
 </div>
 </section>
-<section id="slide-org46807c0">
-<h3 id="org46807c0"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+<section id="slide-org1e46b77">
+<h3 id="org1e46b77"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
@@ -358,8 +359,13 @@ contact the author for product designs if you need them.
 
 <ul>
 <li class="fragment fade-in">Advantages: Reuse your Ergodox keycaps (finding correct amount of keys can be difficult)</li>
-<li class="fragment fade-in">Disadvantages: Incomplete design</li>
-<li class="fragment fade-in">Open Source: Yes</li>
+
+</ul>
+</section>
+<section id="slide-org1e46b77-split">
+<ul>
+<li>Disadvantages: Incomplete design</li>
+<li>Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
@@ -374,8 +380,8 @@ he's made the source available.
 </aside>
 
 </section>
-<section id="slide-org97065e1">
-<h3 id="org97065e1"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+<section id="slide-org416d68a">
+<h3 id="org416d68a"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
 
 <div class="figure">
 <p><img src="img/LightCycle.jpeg" alt="LightCycle.jpeg" />
@@ -384,8 +390,13 @@ he's made the source available.
 
 <ul>
 <li class="fragment fade-in">Advantages: Slightly smaller footprint (fewer keys)</li>
-<li class="fragment fade-in">Disadvantages: STL files for 3D printing appear to need more repair than basic model</li>
-<li class="fragment fade-in">Open Source: Yes</li>
+
+</ul>
+</section>
+<section id="slide-org416d68a-split">
+<ul>
+<li>Disadvantages: STL files for 3D printing appear to need more repair than basic model</li>
+<li>Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
@@ -400,8 +411,8 @@ design, but are meant to be fit with Cherry MX mechanical switches.
 </aside>
 
 </section>
-<section id="slide-org9665d6f">
-<h3 id="org9665d6f"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+<section id="slide-orgf308108">
+<h3 id="orgf308108"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
@@ -411,9 +422,14 @@ design, but are meant to be fit with Cherry MX mechanical switches.
 <ul>
 <li class="fragment fade-in">Advantages: Thumb clusters are brought down to a more natural position, Case
 is larger making wiring less tedious</li>
-<li class="fragment fade-in">Disadvantages: Must be wired by hand, all of the challenges that come with
+
+</ul>
+</section>
+<section id="slide-orgf308108-split">
+<ul>
+<li>Disadvantages: Must be wired by hand, all of the challenges that come with
 original Dactyl</li>
-<li class="fragment fade-in">Open Source: Yes</li>
+<li>Open Source: Yes</li>
 
 </ul>
 <aside class="notes">
@@ -431,8 +447,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgbd13382">
-<h2 id="orgbd13382">More Do-it-Yourself Options</h2>
+<section id="slide-orgce2531f">
+<h2 id="orgce2531f">More Do-it-Yourself Options</h2>
 <p>
 <code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
 </p>
@@ -444,8 +460,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org00d836a">
-<h2 id="org00d836a">Reasons for Choosing Dactyl</h2>
+<section id="slide-orgfef7b5e">
+<h2 id="orgfef7b5e">Reasons for Choosing Dactyl</h2>
 <ul>
 <li>Open Source</li>
 <li>Kinesis Advantage form factor</li>
@@ -454,8 +470,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-org4b32e65">
-<h3 id="org4b32e65">My Reasons for Building by Hand Instead of Purchasing</h3>
+<section id="slide-orgbff864c">
+<h3 id="orgbff864c">My Reasons for Building by Hand Instead of Purchasing</h3>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -467,13 +483,13 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org24ae83d">
-<h2 id="org24ae83d">Build Overview</h2>
-<div class="outline-text-2" id="text-org24ae83d">
+<section id="slide-orge9f5df6">
+<h2 id="orge9f5df6">Build Overview</h2>
+<div class="outline-text-2" id="text-orge9f5df6">
 </div>
 </section>
-<section id="slide-orga0a30c0">
-<h3 id="orga0a30c0">Shell/Case &amp; Hardware</h3>
+<section id="slide-org919ff84">
+<h3 id="org919ff84">Shell/Case &amp; Hardware</h3>
 <ul>
 <li>Time</li>
 <li>Apologize for lack of media</li>
@@ -489,8 +505,8 @@ switch to this in the future.
 </aside>
 
 </section>
-<section id="slide-org247fd6b">
-<h3 id="org247fd6b">Switches &amp; Keycaps</h3>
+<section id="slide-orgd2bd876">
+<h3 id="orgd2bd876">Switches &amp; Keycaps</h3>
 <ul>
 <li>Fits Cherry MX switches, explain what they are</li>
 <li>Go over keycap profiles</li>
@@ -498,8 +514,8 @@ switch to this in the future.
 
 </ul>
 </section>
-<section id="slide-org6c36044">
-<h3 id="org6c36044">Etching</h3>
+<section id="slide-org9ea4966">
+<h3 id="org9ea4966">Etching</h3>
 <ul>
 <li>1:1 ratio of 3% Hydrogen Peroxide &amp; Acid Magic (Marketed as 'safer' Muriatic
 Acid, found on Amazon.)</li>
@@ -507,8 +523,8 @@ Acid, found on Amazon.)</li>
 
 </ul>
 </section>
-<section id="slide-orgac3d3d2">
-<h4 id="orgac3d3d2">Etching Process</h4>
+<section id="slide-org209ac70">
+<h4 id="org209ac70">Etching Process</h4>
 <section><video controls><source data-src="media/Etching-resize.mp4" type="video/mp4" /></video></section>
 <aside class="notes">
 <p>
@@ -518,8 +534,8 @@ backing &amp; sanding residue (220)
 
 </aside>
 </section>
-<section id="slide-org769245f">
-<h3 id="org769245f">PCB &amp; Wiring</h3>
+<section id="slide-orgb09ca60">
+<h3 id="orgb09ca60">PCB &amp; Wiring</h3>
 <ul>
 <li>The circuit design in the repo is inaccurate. I had to flip around some of
 the designs because they were backwards. I didn't find this out until after my
@@ -530,7 +546,7 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 <ul class="org-ul">
-<li><a id="org4d074af"></a>PSA: TRRS <i>not</i> TRS!<br />
+<li><a id="org9849d48"></a>PSA: TRRS <i>not</i> TRS!<br />
 <ul>
 <li>Include comparison.</li>
 
@@ -544,11 +560,11 @@ in case I encountered those kinds of problems.</li>
 </li>
 </ul>
 </section>
-<section id="slide-org392d176">
-<h3 id="org392d176">Firmware</h3>
+<section id="slide-orgb8a0329">
+<h3 id="orgb8a0329">Firmware</h3>
 </section>
-<section id="slide-orgccc6127">
-<h3 id="orgccc6127">How Does it Work?</h3>
+<section id="slide-org540b38f">
+<h3 id="org540b38f">How Does it Work?</h3>
 
 <div class="figure">
 <p><img src="img/howkeymatriceswork.gif" alt="howkeymatriceswork.gif" />
@@ -561,8 +577,8 @@ in case I encountered those kinds of problems.</li>
 
 </aside>
 </section>
-<section id="slide-orgd942c69">
-<h3 id="orgd942c69">Challenges</h3>
+<section id="slide-org41b3e98">
+<h3 id="org41b3e98">Challenges</h3>
 <ul>
 <li>Hardware, clearance &amp; dimensions</li>
 <li>Choosing LED Resistors</li>
@@ -574,8 +590,8 @@ in case I encountered those kinds of problems.</li>
 
 </ul>
 </section>
-<section id="slide-org83b3a6f">
-<h3 id="org83b3a6f">What Did it Cost?</h3>
+<section id="slide-orgab0a125">
+<h3 id="orgab0a125">What Did it Cost?</h3>
 <ul>
 <li>Parts table</li>
 
@@ -583,8 +599,8 @@ in case I encountered those kinds of problems.</li>
 </section>
 </section>
 <section>
-<section id="slide-org6daf7c4">
-<h2 id="org6daf7c4">Resources</h2>
+<section id="slide-orga1489ef">
+<h2 id="orga1489ef">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -614,14 +630,16 @@ commercialize different Dactyl variations.
 <code>I have no affiliation or experience with the above. YMMV!</code>
 </p>
 </section>
-<section id="slide-org6dc721c">
-<h3 id="org6dc721c">Tutorials</h3>
+<section id="slide-orgad3b5b7">
+<h3 id="orgad3b5b7">Tutorials</h3>
 <p>
 <a href="https://www.youtube.com/watch?v=4dZ2LKe7660%20j">Etching with Muriatic Acid &amp; Hydrgen Peroxide</a>
+<a href="https://www.instructables.com/id/Making-flexible-PCBs-with-a-laser-jet-printer-or-c/">https://www.instructables.com/id/Making-flexible-PCBs-with-a-laser-jet-printer-or-c/</a>
+<a href="https://www.instructables.com/id/DIY-Flexible-Printed-Circuits/">https://www.instructables.com/id/DIY-Flexible-Printed-Circuits/</a>
 </p>
 </section>
-<section id="slide-org7d536ce">
-<h3 id="org7d536ce">Hardware &amp; Accessories</h3>
+<section id="slide-orgf53dd6e">
+<h3 id="orgf53dd6e">HARDWARE &amp; Accessories</h3>
 <ul>
 <li><a href="https://kbdfans.com">https://kbdfans.com</a></li>
 <li><a href="https://aliexpress.com">https://aliexpress.com</a>
