--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,12 +26,12 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-11 Thu 16:03</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-11 Thu 16:23</p>
 </section>
 
 <section>
-<section id="slide-orgd586ad2">
-<h2 id="orgd586ad2">Tim Anderson</h2>
+<section id="slide-orge02983e">
+<h2 id="orge02983e">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -57,8 +57,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orgd653f01">
-<h2 id="orgd653f01">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-org3e0344e">
+<h2 id="org3e0344e">So, what is this Dactyl Keyboard thing?</h2>
 <ul>
 <li>And why should I care?</li>
 
@@ -71,8 +71,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org82378cd">
-<h2 id="org82378cd">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-orgb2cfc96">
+<h2 id="orgb2cfc96">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
@@ -94,8 +94,8 @@ first I'll talk a little bit about the project.
 </section>
 </section>
 <section>
-<section id="slide-orgcb40d93">
-<h2 id="orgcb40d93">History &amp; Background</h2>
+<section id="slide-org470fd11">
+<h2 id="org470fd11">History &amp; Background</h2>
 <p>
 <iframe width="440" height="335" src="https://www.youtube.com/embed/uk3A41U0iO4" frameborder="0" allowfullscreen></iframe>
 </p>
@@ -134,8 +134,8 @@ interpret Clojure and convert it into the language that OpenSCAD understands.
 </section>
 </section>
 <section>
-<section id="slide-orgb13b43b">
-<h2 id="orgb13b43b">Where is the Project Now?</h2>
+<section id="slide-org15a64d6">
+<h2 id="org15a64d6">Where is the Project Now?</h2>
 <ul>
 <li>Last commit was in 2017</li>
 <li>Left in unfinished state &amp; appears to be abandoned</li>
@@ -172,8 +172,8 @@ most challenging DIY keyboard projects you could take on.
 </section>
 </section>
 <section>
-<section id="slide-org03c15e8">
-<h2 id="org03c15e8">Why Tho?</h2>
+<section id="slide-org5bc8cff">
+<h2 id="org5bc8cff">Why Tho?</h2>
 <ul>
 <li class="fragment fade-in">In short, because I can.</li>
 
@@ -201,8 +201,8 @@ build my own badass keyboard, so I did.
 </section>
 </section>
 <section>
-<section id="slide-org82d7591">
-<h2 id="org82d7591">So, let's look at a regular keyboard</h2>
+<section id="slide-org625d3c2">
+<h2 id="org625d3c2">So, let's look at a regular keyboard</h2>
 
 <div class="figure">
 <p><object type="image/svg+xml" data="img/KB_United_States.svg" class="org-svg">
@@ -232,8 +232,8 @@ reaching you would need to do while typing.
 </section>
 </section>
 <section>
-<section id="slide-org8c4bd59">
-<h2 id="org8c4bd59">Good Habits Vs. Bad</h2>
+<section id="slide-orgfd0d084">
+<h2 id="orgfd0d084">Good Habits Vs. Bad</h2>
 
 <div class="figure">
 <p><img src="img/keyboard_rsi_prevent.jpg" alt="keyboard_rsi_prevent.jpg" />
@@ -253,8 +253,8 @@ Most of these are other open source keyboards that you can build yourself.
 </section>
 </section>
 <section>
-<section id="slide-orgd88a541">
-<h2 id="orgd88a541">Notable Mentions</h2>
+<section id="slide-org48519b4">
+<h2 id="org48519b4">Notable Mentions</h2>
 <aside class="notes">
 <p>
 So the original Dactyl design is what I chose to build, and I'll go into that
@@ -264,8 +264,8 @@ other options that I've seen mention of while digging into this topic.
 
 </aside>
 </section>
-<section id="slide-org26a35d7">
-<h3 id="org26a35d7"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
+<section id="slide-org48ce1cd">
+<h3 id="org48ce1cd"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -292,8 +292,8 @@ when you drop over $300 on something.
 </aside>
 
 </section>
-<section id="slide-org513e50c">
-<h3 id="org513e50c"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
+<section id="slide-org397d056">
+<h3 id="org397d056"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -321,8 +321,8 @@ readily, and the rest of the parts can be easily sourced yourself.
 </aside>
 
 </section>
-<section id="slide-org14f467f">
-<h3 id="org14f467f"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-orgb067e7c">
+<h3 id="orgb067e7c"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -346,8 +346,8 @@ This is probably the cheapest &amp; simpliest columnar, split design project I'v
 </aside>
 
 </section>
-<section id="slide-orgc3c5d33">
-<h3 id="orgc3c5d33"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
+<section id="slide-orgda08779">
+<h3 id="orgda08779"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -371,8 +371,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-org263d712">
-<h3 id="org263d712"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
+<section id="slide-org011556a">
+<h3 id="org011556a"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -401,13 +401,13 @@ contact the author for product designs if you need them.
 </section>
 </section>
 <section>
-<section id="slide-orgd528082">
-<h2 id="orgd528082">Other Dactyl Variations</h2>
-<div class="outline-text-2" id="text-orgd528082">
+<section id="slide-org679ae39">
+<h2 id="org679ae39">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-org679ae39">
 </div>
 </section>
-<section id="slide-org82c93d9">
-<h3 id="org82c93d9"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+<section id="slide-orgdc647de">
+<h3 id="orgdc647de"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
@@ -419,7 +419,7 @@ contact the author for product designs if you need them.
 
 </ul>
 </section>
-<section id="slide-org82c93d9-split">
+<section id="slide-orgdc647de-split">
 <ul>
 <li>Disadvantages: Incomplete design</li>
 <li>Open Source: Yes</li>
@@ -437,8 +437,8 @@ he's made the source available.
 </aside>
 
 </section>
-<section id="slide-org552fc77">
-<h3 id="org552fc77"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+<section id="slide-org9c440d0">
+<h3 id="org9c440d0"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
 
 <div class="figure">
 <p><img src="img/LightCycle.jpeg" alt="LightCycle.jpeg" />
@@ -450,7 +450,7 @@ he's made the source available.
 
 </ul>
 </section>
-<section id="slide-org552fc77-split">
+<section id="slide-org9c440d0-split">
 <ul>
 <li>Disadvantages: STL files for 3D printing appear to need more repair than basic model</li>
 <li>Open Source: Yes</li>
@@ -468,8 +468,8 @@ design, but are meant to be fit with Cherry MX mechanical switches.
 </aside>
 
 </section>
-<section id="slide-orgca3d83a">
-<h3 id="orgca3d83a"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+<section id="slide-org1c5e0a4">
+<h3 id="org1c5e0a4"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
@@ -482,7 +482,7 @@ is larger making wiring less tedious</li>
 
 </ul>
 </section>
-<section id="slide-orgca3d83a-split">
+<section id="slide-org1c5e0a4-split">
 <ul>
 <li>Disadvantages: Must be wired by hand, all of the challenges that come with
 original Dactyl</li>
@@ -504,8 +504,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgcd77ecd">
-<h2 id="orgcd77ecd">More Do-it-Yourself Options</h2>
+<section id="slide-orge82e1a3">
+<h2 id="orge82e1a3">More Do-it-Yourself Options</h2>
 <p>
 <code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
 </p>
@@ -517,8 +517,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org6b011b2">
-<h2 id="org6b011b2">Reasons for Choosing Dactyl</h2>
+<section id="slide-orgac33461">
+<h2 id="orgac33461">Reasons for Choosing Dactyl</h2>
 <ul>
 <li>Open Source</li>
 <li>Looked like the most comfortable design</li>
@@ -529,8 +529,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org667d2b8">
-<h2 id="org667d2b8">My Reasons for Building by Hand Instead of Purchasing</h2>
+<section id="slide-org86c6aec">
+<h2 id="org86c6aec">My Reasons for Building by Hand Instead of Purchasing</h2>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -541,18 +541,18 @@ my own!</li>
 </section>
 </section>
 <section>
-<section id="slide-org890ab17">
-<h2 id="org890ab17">One Year Later</h2>
+<section id="slide-orgfa8732d">
+<h2 id="orgfa8732d">One Year Later</h2>
 </section>
 </section>
 <section>
-<section id="slide-org3cf0623">
-<h2 id="org3cf0623">Build Overview</h2>
-<div class="outline-text-2" id="text-org3cf0623">
+<section id="slide-org192cf4c">
+<h2 id="org192cf4c">Build Overview</h2>
+<div class="outline-text-2" id="text-org192cf4c">
 </div>
 </section>
-<section id="slide-orgf3a8bbf">
-<h3 id="orgf3a8bbf">Shell/Case</h3>
+<section id="slide-org4efdb23">
+<h3 id="org4efdb23">Shell/Case</h3>
 <ul>
 <li>The body of the keyboard is 3D printed by me</li>
 <li>There are 4 parts to print, each took 21 hours to complete on a RepRap style
@@ -574,22 +574,22 @@ the bottom left half and I think it turned out pretty good.
 
 </aside>
 </section>
-<section id="slide-org69d71e3">
-<h3 id="org69d71e3">Hardware</h3>
+<section id="slide-orgb6565ea">
+<h3 id="orgb6565ea">Hardware</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190711_075410.jpg" alt="IMG_20190711_075410.jpg" />
 </p>
 </div>
 </section>
-<section id="slide-org69d71e3-split">
+<section id="slide-orgb6565ea-split">
 
 <div class="figure">
 <p><img src="img/IMG_20190711_075433.jpg" alt="IMG_20190711_075433.jpg" />
 </p>
 </div>
 </section>
-<section id="slide-org69d71e3-split">
+<section id="slide-orgb6565ea-split">
 
 <div class="figure">
 <p><img src="img/IMG_20190711_155341.jpg" alt="IMG_20190711_155341.jpg" />
@@ -611,8 +611,8 @@ cause any shorts with the wiring.
 </aside>
 
 </section>
-<section id="slide-org77f1fd3">
-<h3 id="org77f1fd3">Switches</h3>
+<section id="slide-org568e5d6">
+<h3 id="org568e5d6">Switches</h3>
 <ul>
 <li>Fits Cherry MX switches</li>
 
@@ -629,8 +629,8 @@ example (just be aware that colors/models differ between the two manufacturers).
 
 </aside>
 </section>
-<section id="slide-org5c4fd25">
-<h3 id="org5c4fd25">Keycaps</h3>
+<section id="slide-org12cf766">
+<h3 id="org12cf766">Keycaps</h3>
 
 <div class="figure">
 <p><img src="img/keycap-profiles-reddit.jpg" alt="keycap-profiles-reddit.jpg" />
@@ -652,11 +652,25 @@ that reason.
 </aside>
 
 </section>
-<section id="slide-org7c18aa8">
-<h3 id="org7c18aa8">PCB Design</h3>
+<section id="slide-org8746262">
+<h3 id="org8746262">PCB Design</h3>
 
 <div class="figure">
 <p><img src="img/Dactyl_8x9.png" alt="Dactyl_8x9.png" />
+</p>
+</div>
+</section>
+<section id="slide-org8746262-split">
+
+<div class="figure">
+<p><img src="img/clear-dactyl-right.jpg" alt="clear-dactyl-right.jpg" />
+</p>
+</div>
+</section>
+<section id="slide-org8746262-split">
+
+<div class="figure">
+<p><img src="img/clear-dactyl-left.jpg" alt="clear-dactyl-left.jpg" />
 </p>
 </div>
 <aside class="notes">
@@ -683,8 +697,8 @@ piece individually.
 </aside>
 
 </section>
-<section id="slide-orgdd3bbd2">
-<h3 id="orgdd3bbd2">Xerox Printer</h3>
+<section id="slide-orgc05248a">
+<h3 id="orgc05248a">Xerox Printer</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190711_074742.jpg" alt="IMG_20190711_074742.jpg" />
@@ -705,8 +719,8 @@ paper jamming issue and replaced them with parts sourced from ebay.
 </aside>
 
 </section>
-<section id="slide-orge38588f">
-<h3 id="orge38588f">Preparing the Copper for the Design</h3>
+<section id="slide-org58a088c">
+<h3 id="org58a088c">Preparing the Copper for the Design</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190630_231134.jpg" alt="IMG_20190630_231134.jpg" />
@@ -725,8 +739,8 @@ would apply enough wax to hold the design together.
 </aside>
 
 </section>
-<section id="slide-orge4c0037">
-<h3 id="orge4c0037">Final PCB Design</h3>
+<section id="slide-orgeb3bed0">
+<h3 id="orgeb3bed0">Final PCB Design</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190630_232417.jpg" alt="IMG_20190630_232417.jpg" />
@@ -734,11 +748,11 @@ would apply enough wax to hold the design together.
 </div>
 
 </section>
-<section id="slide-orgfe7dc70">
-<h3 id="orgfe7dc70">Etching</h3>
+<section id="slide-orga499447">
+<h3 id="orga499447">Etching</h3>
 <section><video controls><source data-src="media/Etching.mp4" type="video/mp4" /></video></section>
 </section>
-<section id="slide-orgfe7dc70-split">
+<section id="slide-orga499447-split">
 
 <div class="figure">
 <p><img src="img/IMG_20190701_124022.jpg" alt="IMG_20190701_124022.jpg" />
@@ -766,8 +780,8 @@ of coating over the copper to prevent corrosion.
 </aside>
 
 </section>
-<section id="slide-orgf79f5bf">
-<h3 id="orgf79f5bf">How Does it Work?</h3>
+<section id="slide-orgb356eca">
+<h3 id="orgb356eca">How Does it Work?</h3>
 
 <div class="figure">
 <p><img src="img/howkeymatriceswork.gif" alt="howkeymatriceswork.gif" />
@@ -800,10 +814,11 @@ to updates in the QMK firmware, but I don't know. It's something to be aware of.
 </aside>
 
 </section>
-<section id="slide-org15a4df1">
-<h3 id="org15a4df1">Notes on LEDs</h3>
+<section id="slide-orgdb760dd">
+<h3 id="orgdb760dd">Notes on LEDs</h3>
 <ul>
 <li>Use Ohm's Law to match reistors to curret rating on LEDs (Assume 5v)</li>
+<li>For LEDs under keycaps use T-1 LEDs</li>
 
 </ul>
 <aside class="notes">
@@ -825,8 +840,8 @@ of LED you would use to backlight your keycaps.
 </aside>
 
 </section>
-<section id="slide-org3839d98">
-<h3 id="org3839d98">PSA: TRRS != TRS!</h3>
+<section id="slide-org3548330">
+<h3 id="org3548330">PSA: TRRS != TRS!</h3>
 
 <div class="figure">
 <p><img src="img/TRRS.JPG" alt="TRRS.JPG" />
@@ -851,8 +866,8 @@ that's more likely due to a short in the right half that I still need to diagnos
 </aside>
 
 </section>
-<section id="slide-orgc724f1f">
-<h3 id="orgc724f1f">Firmware</h3>
+<section id="slide-org93ef2e7">
+<h3 id="org93ef2e7">Firmware</h3>
 <aside class="notes">
 <p>
 So I have a spare Teensy 2.0 here, and I think instead of describing the
@@ -867,8 +882,8 @@ list of hardware that the project supports.
 </section>
 </section>
 <section>
-<section id="slide-org275fb44">
-<h2 id="org275fb44">Was It Worth It?</h2>
+<section id="slide-orgec22ffc">
+<h2 id="orgec22ffc">Was It Worth It?</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -930,8 +945,8 @@ list of hardware that the project supports.
 </section>
 </section>
 <section>
-<section id="slide-org66664cc">
-<h2 id="org66664cc">Resources</h2>
+<section id="slide-orgd9cedc5">
+<h2 id="orgd9cedc5">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -957,8 +972,8 @@ Seems to be the primary vendor for the Let's Split PCBs
 </p>
 
 </section>
-<section id="slide-org8aef495">
-<h3 id="org8aef495">Tutorials</h3>
+<section id="slide-orgcebf561">
+<h3 id="orgcebf561">Tutorials</h3>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=4dZ2LKe7660">Etching with Muriatic Acid &amp; Hydrgen Peroxide</a></li>
 <li><a href="https://www.youtube.com/watch?v=1nwnnMoudu0">HongKongGhost - Dactyl
@@ -970,13 +985,11 @@ Hand-Wiring Build Video</a></li>
 </ul>
 
 </section>
-<section id="slide-orgee64d52">
-<h3 id="orgee64d52">Hardware &amp; Accessories Vendors</h3>
-<p>
-<a href="https://digikey.com">Digikey.com - Electrical components</a>
-<a href="https://www.sparkfun.com/">Sparkfun.com - Hobby-grade electrical components</a>
-</p>
+<section id="slide-org03ef87f">
+<h3 id="org03ef87f">Hardware &amp; Accessories Vendors</h3>
 <ul>
+<li><a href="https://digikey.com">Digikey.com - Electrical components</a></li>
+<li><a href="https://www.sparkfun.com/">Sparkfun.com - Hobby-grade electrical components</a></li>
 <li><a href="https://www.mcmaster.com/">McMaster-Carr - Hardware supplier (price-compare
 Ebay first)</a></li>
 <li><a href="https://kbdfans.com">KBDFans.com - Lots of keyboard components, ships from China</a></li>
